2008-08-20  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: bump svn version after tag.

2008-08-20  Mike Kestner  <mkestner@novell.com>

	* generator/ReturnValue.cs: use new ListPtrToArray marshaler for
	lists with known element types.
	* glib/Marshaller.cs: new ListPtrToArray marshaller with more
	aggressive list disposal.
	* gtk/Container.custom: remove manual Children impl.  Use Children
	in GetEnumerator instead of pinvoking directly.
	* gtk/Gtk.metadata: remove hidden attr and add element type and owned 
	for Container.GetChildren to generate it properly.

2008-08-20  Mike Kestner  <mkestner@novell.com>

	Patch from Christian Hoff fixing bug #396195.
	* generator/Property.cs: handle interface adapter values.
	* generator/InterfaceGen.cs: register the gtype so mapping occurs
	automatically for interface adapters.  New GetObject overload to
	handle already wrapped objects more efficiently.
	* glib/Value.cs: handle set_Val for interface adapter objects.

2008-08-19  Brad Taylor  <brad@getcoded.net>
	
	* atk/Object.custom: Add method to allow emission of
	  visible-data-changed signal.

	* atk/TextChangedDetail.cs: 
	* atk/TextAdapter.custom: Add method to allow emission of text-changed
	  signal.

2008-08-13  Mike Kestner  <mkestner@novell.com>

	* atk/Atk.metadata: switch Value methods to ref params since atk
	actually checks for initialized values instead of just treating it
	like uninitialized memory.  Makes for uglier API, but avoids crashes
	in unfortunate memory content scenarios.

2008-08-04  Mike Kestner  <mkestner@novell.com>

	* gtk/IconTheme.custom: elements and the list returned by
	ListIcons are owned.

2008-08-04  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: mark IconTheme.LoadIcon return as owned.

2008-07-23  Mike Kestner  <mkestner@novell.com>

	* atk/Atk.metadata: map some out params on Atk.Value.  They
	were unusable in their existing form.

2008-07-08  Mike Kestner  <mkestner@novell.com>
