@@ -1,5 +1,10 @@
 2008-08-20  Mike Kestner  <mkestner@novell.com>
 
+	* glib/Object.cs:
+	* glib/Signal.cs: fix a couple 2.0-isms.  Patch from Christian Hoff.
+
+2008-08-20  Mike Kestner  <mkestner@novell.com>
+
 	* bootstrap-2.12: bump svn version after tag.
 
 2008-08-20  Mike Kestner  <mkestner@novell.com>
